added displaycart to show cart items and progression on cartAPI

--- a/order.html
+++ b/order.html
@@ -28,7 +28,7 @@
 					<li><a href="order.html">Order Now</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
-					<li><a>Shopping cart (<span id="cartNum">0</span>)</a></li>
+					<li><a href="DisplayCart.html">Shopping cart (<span id="cartNum"></span>)</a></li>
 					<li><a onclick="clearCart()">Clear cart</a></li>
 				</ul>
 			</nav>
@@ -687,19 +687,19 @@
 										<h4>Choose or Remove a Topping</h4>
 										<div class="checkboxes">
 											<label class="container">Cucumbers
-											<input type="checkbox" checked="checked">
+											<input type="checkbox" class="extras10" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 											<label class="container">Red Onion
-											<input type="checkbox" checked="checked">
+											<input type="checkbox" class="extras10" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 											<label class="container">Fresh Greens
-											<input type="checkbox" checked="checked">
+											<input type="checkbox" class="extras10" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 											<label class="container">Tzaziki Sauce
-											<input type="checkbox" checked="checked">
+											<input type="checkbox" class="extras10" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 											<br><br><br>
@@ -709,17 +709,17 @@
 										<div class="checkboxes">
 											<label class="container">Billy Goat Chips<br>
 											(+ $1.00)
-											<input type="checkbox" checked="checked">
+											<input type="checkbox" class="extras10" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 											<label class="container">Tater Tots<br>
 											(+ $2.00)
-											<input type="checkbox" checked="checked">
+											<input type="checkbox" class="extras10" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 											<label class="container">Kale Salad<br>
 											(+ $3.00)
-											<input type="checkbox" checked="checked">
+											<input type="checkbox" class="extras10" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 											</div>
@@ -729,7 +729,7 @@
 									<div id="qty">Quantity: <input type="number" name="quantity"min="1"></div>
 									<br><br><br>
 									<div id="total">Total:<span id="totalAmt">     &nbsp;&nbsp;&nbsp;&nbsp;$6.95</span></div><br><br><br>
-									<button class="addcancelbtn">Add to Cart</button>
+									<button class="addcancelbtn" onclick="addToCart(10)">Add to Cart</button>
 									<button class="addcancelbtn" id="cancel">Cancel</button>
 									</div>	
 									</div> 
@@ -771,7 +771,7 @@
 										<div class="checkboxes">
 											<label class="container">House-made<br> 
 											Caesar Dressing
-											<input type="checkbox" checked="checked" checked>
+											<input type="checkbox" class="extras11" checked="checked" checked>
 											<span class="checkmark"></span>
 											</label>
 											<br><br><br>
@@ -780,15 +780,15 @@
 										<h4>Choose or Remove a Topping</h4>
 										<div class="checkboxes">
 											<label class="container">Shredded Kale
-											<input type="checkbox" checked="checked" checked>
+											<input type="checkbox" class="extras11" checked="checked" checked>
 											<span class="checkmark"></span>
 											</label>
 											<label class="container">Brussels Sprouts 
-											<input type="checkbox" checked="checked">
+											<input type="checkbox" class="extras11" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 											<label class="container">Chickpea <br>Croutons
-											<input type="checkbox" checked="checked">
+											<input type="checkbox" class="extras11" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 										</div>
@@ -798,7 +798,7 @@
 									<div id="qty">Quantity: <input type="number" name="quantity"min="1"></div>
 									<br><br>
 									<div id="total">Total:<span id="totalAmt">     &nbsp;&nbsp;&nbsp;&nbsp;$8.95</span></div><br><br><br>
-									<button class="addcancelbtn">Add to Cart</button>
+									<button class="addcancelbtn" onclick="addToCart(11)">Add to Cart</button>
 									<button class="addcancelbtn" id="cancel">Cancel</button>
 									</div>	
 									</div> 
