cart has full functionallity

--- a/order.html
+++ b/order.html
@@ -687,19 +687,19 @@
 										<h4>Choose or Remove a Topping</h4>
 										<div class="checkboxes">
 											<label class="container">Cucumbers
-											<input type="checkbox" class="extras10" checked="checked">
+											<input type="checkbox" name="extras10" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 											<label class="container">Red Onion
-											<input type="checkbox" class="extras10" checked="checked">
+											<input type="checkbox" name="extras10" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 											<label class="container">Fresh Greens
-											<input type="checkbox" class="extras10" checked="checked">
+											<input type="checkbox" name="extras10" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 											<label class="container">Tzaziki Sauce
-											<input type="checkbox" class="extras10" checked="checked">
+											<input type="checkbox" name="extras10" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 											<br><br><br>
@@ -709,17 +709,17 @@
 										<div class="checkboxes">
 											<label class="container">Billy Goat Chips<br>
 											(+ $1.00)
-											<input type="checkbox" class="extras10" checked="checked">
+											<input type="checkbox" name="extras10" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 											<label class="container">Tater Tots<br>
 											(+ $2.00)
-											<input type="checkbox" class="extras10" checked="checked">
+											<input type="checkbox" name="extras10" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 											<label class="container">Kale Salad<br>
 											(+ $3.00)
-											<input type="checkbox" class="extras10" checked="checked">
+											<input type="checkbox" name="extras10" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 											</div>
@@ -771,7 +771,7 @@
 										<div class="checkboxes">
 											<label class="container">House-made<br> 
 											Caesar Dressing
-											<input type="checkbox" class="extras11" checked="checked" checked>
+											<input type="checkbox" name="extras11" checked="checked" checked>
 											<span class="checkmark"></span>
 											</label>
 											<br><br><br>
@@ -780,15 +780,15 @@
 										<h4>Choose or Remove a Topping</h4>
 										<div class="checkboxes">
 											<label class="container">Shredded Kale
-											<input type="checkbox" class="extras11" checked="checked" checked>
+											<input type="checkbox" name="extras11" checked="checked" checked>
 											<span class="checkmark"></span>
 											</label>
 											<label class="container">Brussels Sprouts 
-											<input type="checkbox" class="extras11" checked="checked">
+											<input type="checkbox" name="extras11" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 											<label class="container">Chickpea <br>Croutons
-											<input type="checkbox" class="extras11" checked="checked">
+											<input type="checkbox" name="extras11" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 										</div>
