Committed by Henry Versemann
Changed menus of all pages listed below to include links to the new
Shopping Cart and Clear Cart links.

--- a/gallery.html
+++ b/gallery.html
@@ -25,6 +25,8 @@
                     <li><a href="order.html">Order Now</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
+					<li><a href="DisplayCart.html">Shopping cart (<span id="cartNum"></span>)</a></li>
+					<li><a onclick="clearCart()">Clear cart</a></li>
 				</ul>
 			</nav>
         </div> 
