--- a/DisplayCart.html
+++ b/DisplayCart.html
@@ -26,7 +26,7 @@
 					<li><a href="order.html">Order Now</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
-					<li><a>Shopping cart (<span id="cartNum"></span>)</a></li>
+					<li><a href="DisplayCart.html">Shopping cart (<span id="cartNum"></span>)</a></li>
 					<li><a onclick="clearCart()">Clear cart</a></li>
 				</ul>
 			</nav>
