--- a/order.html
+++ b/order.html
@@ -2462,11 +2462,11 @@
 											<span class="checkmark"></span>
 											</label>
 											<label class="container">Banh Mi Taco
-											<input type="checkbox" checked="checked">
+											<input type="checkbox">
 											<span class="checkmark"></span>
 											</label>
 											<label class="container">BBQ Jack Taco
-											<input type="checkbox" checked="checked">
+											<input type="checkbox">
 											<span class="checkmark"></span>
 											</label>
 										</div>
@@ -2522,7 +2522,7 @@
 								<td>
 								<img class="foodimg" src="assets/minis.jpg" alt="mini bbq burger" height="150px" width="230px">
 								<!-- Trigger/Open The Modal -->
-								<a href="#modalThirtyFive" class="title" data-modal="modalThirtyFive" id="Title">BBQ Slider</a>
+								<a href="#modalThirtyFive" class="title" data-modal="modalThirtyFive" id="Title">BBQ Slider (1)</a>
 								<div id="contains">
 										<img src="assets/sf2.png" height="30px" alt="soy free"><img src="assets/nf2.png" height="30px" alt="nut free">
 										</div><br><br>
