Added cart back to order.html

--- a/order.html
+++ b/order.html
@@ -27,6 +27,8 @@
 					<li><a href="order.html">Order Now</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
+					<li><a href="DisplayCart.html">Shopping cart (<span id="cartNum"></span>)</a></li>
+					<li><a onclick="clearCart()">Clear cart</a></li>
 				</ul>
 			</nav>
 			<script>
@@ -2462,11 +2464,11 @@
 											<span class="checkmark"></span>
 											</label>
 											<label class="container">Banh Mi Taco
-											<input type="checkbox">
+											<input type="checkbox" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 											<label class="container">BBQ Jack Taco
-											<input type="checkbox">
+											<input type="checkbox" checked="checked">
 											<span class="checkmark"></span>
 											</label>
 										</div>
@@ -2522,7 +2524,7 @@
 								<td>
 								<img class="foodimg" src="assets/minis.jpg" alt="mini bbq burger" height="150px" width="230px">
 								<!-- Trigger/Open The Modal -->
-								<a href="#modalThirtyFive" class="title" data-modal="modalThirtyFive" id="Title">BBQ Slider (1)</a>
+								<a href="#modalThirtyFive" class="title" data-modal="modalThirtyFive" id="Title">BBQ Slider</a>
 								<div id="contains">
 										<img src="assets/sf2.png" height="30px" alt="soy free"><img src="assets/nf2.png" height="30px" alt="nut free">
 										</div><br><br>
