--- a/location.html
+++ b/location.html
@@ -41,6 +41,7 @@
 							<span class="attr">Call Us:</span>&nbsp;<div class="floatr">314-300-8215</div><br><br>
 							<span class="attr">Monday:</span>&nbsp;<div class="floatr">11:30am - 9:00pm</div><br><br>
 							<span class="attr">Tuesday:</span>&nbsp;<div class="floatr">11:30am - 9:00pm</div><br><br>
+							<span class="attr">Wednesday:</span>&nbsp;<div class="floatr">11:30am - 9:00pm</div><br><br>
 							<span class="attr">Thursday:</span>&nbsp;<div class="floatr">11:30am - 9:00pm</div><br><br>
 							<span class="attr">Friday:</span>&nbsp;<div class="floatr">11:30am - 9:00pm</div><br><br>
 							<span class="attr">Saturday:</span>&nbsp;<div class="floatr">11:30am - 9:00pm</div><br><br>
