added catering to nav, ping pong reservation form

--- a/catering.html
+++ b/catering.html
@@ -1,4 +1,4 @@
-<!--Jasmine created and designed -->
+<!--Henry created, based on Jasmine's forms, edited by Nathan-->
 <!DOCTYPE html>
 <html>
   <head>
@@ -25,6 +25,7 @@
                     <li><a href="order.html">Order Now</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
+					<li><a href="catering.html">Catering</a></li>
 					<li><a href="DisplayCart.html">Shopping cart (<span id="cartNum"></span>)</a></li>
 					<li><a onclick="clearCart()">Clear cart</a></li>
 				</ul>
