--- a/gallery.html
+++ b/gallery.html
@@ -1,4 +1,3 @@
-<!--Nathan designed and edited -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -24,7 +23,8 @@
 					<li><a href="sustain.html">Sustainability</a></li>
                     <li><a href="order.html">Order Now</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
-					<li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="catering.html">Catering</a></li>
 					<li><a href="DisplayCart.html">Shopping cart (<span id="cartNum"></span>)</a></li>
 					<li><a onclick="clearCart()">Clear cart</a></li>
 				</ul>
