--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!--Designed by Jasmine, edited by Nathan -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -25,6 +24,7 @@
 					<li><a href="order.html">Order Now</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
+					<li><a href="catering.html">Catering</a></li>
 					<li><a href="DisplayCart.html">Shopping cart (<span id="cartNum"></span>)</a></li>
 					<li><a onclick="clearCart()">Clear cart</a></li>
 				</ul>
