--- a/order.html
+++ b/order.html
@@ -1,4 +1,4 @@
-<!--Jasmine designed page, Nathan edited for bug fix-->
+<!--Jasmine designed page, Nathan edited for bug fix, Gabe worked with page for shopping cart functionality-->
 <!DOCTYPE html>
 <html>
   <head>
@@ -28,6 +28,7 @@
 					<li><a href="order.html">Order Now</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
+					<li><a href="catering.html">Catering</a></li>
 					<li><a href="DisplayCart.html">Shopping cart (<span id="cartNum"></span>)</a></li>
 					<li><a onclick="clearCart()">Clear cart</a></li>
 				</ul>
