--- a/pingpong.html
+++ b/pingpong.html
@@ -25,13 +25,14 @@
 					<li><a href="order.html">Order Now</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
+					<li><a href="catering.html">Catering</a></li>
 					<li><a href="DisplayCart.html">Shopping cart (<span id="cartNum"></span>)</a></li>
 					<li><a onclick="clearCart()">Clear cart</a></li>				
 				</ul>
 			</nav>
 		</div>
 				<div class = bodyGrid>
-					<div class=content><p><b>Located directly above the restaurant, Lulu’s ping pong bar is open for ping pong all day and has a full bar from 5pm till midnight. The bar offers signature and classic cocktails, wine and craft beer on tap email <a href="mailto:luluslocaleatery@gmail.com">Lulu's</a> to reserve the ping pong bar for your next event.</b></p></div>
+					<div class=content><p><b>Located directly above the restaurant, Lulu’s ping pong bar is open for ping pong all day and has a full bar from 5pm till midnight. The bar offers signature and classic cocktails, wine and craft beer on tap go to <a href="pingPongReservation.html">our reservation page</a> to contact us about reserving the Ping Pong Bar.</b></p></div>
 					<div class=item></div>
 					<div class=item3></div>
 					<div class=item4></div>
