--- a/location.html
+++ b/location.html
@@ -1,4 +1,3 @@
-<!--Jasmine designed, Nathan edited -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -26,6 +25,7 @@
                     <li><a href="order.html">Order Now</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
+					<li><a href="catering.html">Catering</a></li>
 					<li><a href="DisplayCart.html">Shopping cart (<span id="cartNum"></span>)</a></li>
 					<li><a onclick="clearCart()">Clear cart</a></li>
 				</ul>
