--- a/pingPongReservation.html
+++ b/pingPongReservation.html
@@ -1,4 +1,4 @@
-<!--Jasmine created and designed - pingpong bar reservation page with some tweaks by Henry -->
+<!--Henry created based on Jasmine's forms, edited by Nathan -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -25,9 +25,9 @@
                     <li><a href="order.html">Order Now</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
+					<li><a href="catering.html">Catering</a></li>
 					<li><a href="DisplayCart.html">Shopping cart (<span id="cartNum"></span>)</a></li>
 					<li><a onclick="clearCart()">Clear cart</a></li>
-					<li><a href="catering.html">Catering</a></li>
 				</ul>
 			</nav>
 		</div>
