--- a/catering.html
+++ b/catering.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 	<link rel="stylesheet" type="text/css" href="styles/contact.css">
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<script src="scripts/Shopping_Cart.js"></script>
   </head>
   <body>
     <div id = root>
