--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Lulu's Local Eatery</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   <link rel="stylesheet" type="text/css" href="styles/style.css">
-  <link rel="stylesheet" type ="text/css" href="styles/home.css">
+	<link rel="stylesheet" type ="text/css" href="styles/home.css">
+	<script src="scripts/Shopping_Cart.js"></script>
   </head>
   <body>
     <div id = root>
