--- a/location.html
+++ b/location.html
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 	<link rel="stylesheet" type="text/css" href="styles/location.css">
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<script src="scripts/Shopping_Cart.js"></script>
 	
   </head>
   <body>
