--- a/DisplayCart.html
+++ b/DisplayCart.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Lulu's Local Eatery</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 	<link rel="stylesheet" type="text/css" href="styles/displayCart.css">
+	<link rel="stylesheet" type="text/css" href="styles/style.css">	
 	<script src="scripts/Shopping_Cart.js"></script>
 	<script src="scripts/displayCart.js"></script>
   </head>
@@ -33,12 +33,13 @@
 				</ul>
 			</nav>
 		</div>
-		<div style="text-align: center">
+		<div class=bodyGrid>
+		<div class=cart>
 		<span style="margin:auto; display:table; border:1px solid black" id="DisplayCart">
 			</span>
 		</div>
    <div>
-					<div class=asidebar>
+					<div class=details>
 						<aside role="complementary">
 							<h3>The Menu</h3>
 								<p class="news">Offering you a rotating selection of specialty and local craft beer, local artisan tea, carbonated juice, kombucha, coffee by <a href="https://www.sumpcoffee.com/" alt="Link to Sump Coffee"> Sump</a>, and baked goods by <a href="http://whiskstl.com/" alt="Like to Whisk">Whisk</a> we present to you our menu.<br><br>
@@ -53,7 +54,7 @@
 						</aside>
 					</div>
 				</div>
-				
+			</div>
 				<div class=footerArea>
 					   <div id= social>
 						  <a href="https://twitter.com/login?lang=en" target="_blank"><img src="assets/twitter2.png" alt="Twitter"></a>
