added remove function and progress on total price of items

--- a/DisplayCart.html
+++ b/DisplayCart.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/displayCart.css">
 	<link rel="stylesheet" type="text/css" href="styles/style.css">	
 	<script src="scripts/Shopping_Cart.js"></script>
+	<script src="scripts/deleteItem.js"></script>
 	<script src="scripts/displayCart.js"></script>
   </head>
   <body>
@@ -37,6 +38,8 @@
 		<div class=cart>
 		<span style="margin:auto; display:table; border:1px solid black" id="DisplayCart">
 			</span>
+			<br>
+			<span id="totalPrice">$</span>
 		</div>
    <div>
 					<div class=details>
