more stuff on total

--- a/DisplayCart.html
+++ b/DisplayCart.html
@@ -36,7 +36,7 @@
 		</div>
 		<div class=bodyGrid>
 		<div class=cart>
-		<span style="margin:auto; display:table; border:1px solid black" id="DisplayCart">
+		<span style="margin:auto; display:table;" id="DisplayCart">
 			</span>
 			<br>
 			<span id="totalPrice">$</span>
