remove credit card fields from catering.html and pingPongreservation.html - hdv

--- a/catering.html
+++ b/catering.html
@@ -38,7 +38,7 @@
 						<p>Fill out the form below. Let us know what you want and when and where you'll want it and we'll get back to you as soon as possible.</p><br>
 			<form action="submit.html" id="contactform">
 				<fieldset>
-					<legend>Contact Form</legend>
+					<legend>Catering Form</legend>
 					<br>
 					<span id="required">* </span>First Name:
 					<input type="text" required="required" placeholder="Lulu"><br><br>
@@ -56,12 +56,6 @@
 					<input type="text" placeholder="314-555-5555"><br><br>
 					<span id="required">* </span>E-mail:
 					<input type="text" required="required" placeholder="ilovelulus@yahoo.com"><br><br>
-					<span id="required">* </span>Credit Card Type:
-					<input type="text" required="required" placeholder="visa"><br><br>
-					<span id="required">* </span>Card Number:
-					<input type="text" required="required" placeholder="1234567890"><br><br>
-					<span id="required">* </span>Expire Date::
-					<input type="text" required="required" placeholder="mm/yyyy"><br><br>
 					&nbsp;&nbsp;<span>Event Location(if different from above information):</span><br><br>
 										&nbsp;&nbsp;Event Address:
 					<input type="text" placeholder="3201 S Grand Ave "><br><br>
