Changes to food.html, styles, and order.html

--- a/order.html
+++ b/order.html
@@ -56,17 +56,17 @@
 				<div class= orderGrid>
 					<div class = food>
 						<div class="tab">
-						  <button  onclick="openTab('Starters')">Starters, Salads, & Sides</button>
-						  <button onclick="openTab('Wraps')">Wraps & Sandwiches</button>
-						  <button onclick="openTab('Tacos')">Tacos & Burritos</button>
-						  <button onclick="openTab('Entrees')">Entrees</button>
-						  <button onclick="openTab('Kids')">Kids</button>
+						  <button  onclick="openTab('Starters')"><img class="icons" src="assets/sideicon.png" alt="Starters, Salads, & Sides" height="30px">Starters, Salads, & Sides</button>
+						  <button onclick="openTab('Wraps')"><img class="icons" src="assets/burger.png" alt="Wraps & Sandwiches" height="30px">Wraps & Sandwiches</button>
+						  <button onclick="openTab('Tacos')"><img class="icons" src="assets/taco.png" alt="Tacos & Burritos" height="35px">Tacos & Burritos</button>
+						  <button onclick="openTab('Entrees')"><img class="icons" src="assets/bowl.png" alt="Entrees" height="35px">Entrees</button>
+						  <button onclick="openTab('Kids')"><img class="icons" src="assets/kids.png" alt="Kids" height="35px">Kids</button>
 						</div>
 						
 						<!--Tab One-->
 						<div id="Starters" class="tabs">
 						  <table id="group">
-						  <th>* Starters, Salads, & Sides *</th>
+						  <th><img class="icons" src="assets/sideicon.png" alt="Starters, Salads, & Sides" height="50px">Starters, Salads, & Sides<img class="icons" src="assets/sideicon.png" alt="Starters, Salads, & Sides" height="50px"></th>
 						  <tr>
 								<td id="key">
 								<img src="assets/gl2.png" height="50px" alt="gluten less">gluten-less&nbsp;&nbsp;&nbsp;&nbsp;
@@ -987,7 +987,7 @@
 						<!--Tab Two-->
 						<div id="Wraps" class="tabs" style="display:none">
 						  <table id="group">
-						  <th>* Wraps & Sandwiches *</th>
+						  <th><img class="icons" src="assets/burger.png" alt="Wraps & Sandwiches" height="50px"> Wraps & Sandwiches <img class="icons" src="assets/burger.png" alt="Wraps & Sandwiches" height="50px"></th>
 							<tr>
 								<td id="key">
 								<img src="assets/gl2.png" height="50px" alt="gluten less">gluten-less&nbsp;&nbsp;&nbsp;&nbsp;
@@ -1719,7 +1719,7 @@
 						<!--Tab Three-->
 						<div id="Tacos" class="tabs" style="display:none">
 						  <table id="group">
-						  <th>* Tacos & Burritos *</th>
+						  <th><img class="icons" src="assets/taco.png" alt="Tacos & Burritos" height="55px"> Tacos & Burritos <img class="icons" src="assets/taco.png" alt="Tacos & Burritos" height="55px"></th>
 							<tr>
 								<td id="key">
 								<img src="assets/gl2.png" height="50px" alt="gluten less">gluten-less&nbsp;&nbsp;&nbsp;&nbsp;
@@ -2400,7 +2400,7 @@
 						<!--Tab Four-->
 						<div id="Entrees" class="tabs" style="display:none">
 						  <table id="group">
-						  <th>* Entree Bowls *</th>
+						  <th><img class="icons" src="assets/bowl.png" alt="Entrees" height="55px"> Entree Bowls <img class="icons" src="assets/bowl.png" alt="Entrees" height="55px"></th>
 						  <tr>
 								<td id="key">
 								<img src="assets/gl2.png" height="50px" alt="gluten less">gluten-less&nbsp;&nbsp;&nbsp;&nbsp;
@@ -2844,7 +2844,7 @@
 						<!--Tab Five-->
 						<div id="Kids" class="tabs" style="display:none">
 						  <table id="group">
-						  <th>* Kids Menu *</th>
+						  <th><img class="icons" src="assets/kids.png" alt="Kids" height="55px"> Kids Menu <img class="icons" src="assets/kids.png" alt="Kids" height="55px"></th>
 						  <tr>
 								<td id="key">
 								<img src="assets/gl2.png" height="50px" alt="gluten less">gluten-less&nbsp;&nbsp;&nbsp;&nbsp;
