Changes to index.html, food.html, and their css

--- a/lulu's/public/luluslocaleatery/food.html
+++ b/lulu's/public/luluslocaleatery/food.html
@@ -34,7 +34,7 @@
 				<div class = bodyGrid>
 					<div class=maincontent>
 						<img src="assets/logo3.png" alt="lulu's local eatery" id="logoimg"><br>
-						<h3><a href="index.html">Click here for available discounts !</a></h3>
+						<h3><a href="sustain.html">Click here for available discounts !</a></h3>
 				    </div>
 					<div class="grid-container">
 							<div class="grid-item"><a target="_blank" href="assets/food1.jpg">
@@ -65,8 +65,7 @@
 						</div>
 						<div id=specials>
 							<h2 class="h2">Specials</h2>
-							<p class="p">The <a href="http://newportwildernesssociety.org">
-								Newport Wilderness Society</a> sponsors free meadow hikes at 9am every Saturday. Stop by the park office to register!</p>
+							<p class="p">Unfortunetly, there are no specials being offered at this time.</p>
 						</div>
 						<div id=discounts>
 							<h2>Discounts</h2>
