--- a/lulu's/public/luluslocaleatery/index.html
+++ b/lulu's/public/luluslocaleatery/index.html
@@ -142,12 +142,11 @@
 						</div>
 						<div id=specials>
 							<h2 class="h2">Specials</h2>
-							<p class="p">The <a href="http://newportwildernesssociety.org">
-								Newport Wilderness Society</a> sponsors free meadow hikes at 9am every Saturday. Stop by the park office to register!</p>
+							<p class="p">Unfortunetly, there are no specials being offered at this time.</p>
 						</div>
 						<div id=discounts>
 							<h2>Discounts</h2>
-								<p class="p">From time to time, as a treat to our customers, lulu's likes to offer discounts as a thoughtful thanks to our customer for their patronage. <br><br>Click here to see our available discounts now!
+								<p class="p">From time to time, as a treat to our customers, lulu's likes to offer discounts as a thoughtful thanks to our customer for their patronage. <br><br><a href="sustain.html">Click here</a> to see our biking discount available now!
 								</p>
 						</div>
 					</div>
